--- a/main.ipynb
+++ b/main.ipynb
@@ -30,6 +30,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('webpage.html', 'w', encoding='utf-8') as f:\n",
+    "    f.write(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -2474,37 +2484,503 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "page_contents = response.text"
+    "topics = page.find_all('p', class_='f3 lh-condensed mb-0 mt-1 Link--primary')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('webpage.html', 'w', encoding='utf-8') as f:\n",
-    "    f.write(response.text)"
+    "topics_list = []\n",
+    "for topic in topics:\n",
+    "    topics_list.append(topic.text.strip())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['3D',\n",
+       " 'Ajax',\n",
+       " 'Algorithm',\n",
+       " 'Amp',\n",
+       " 'Android',\n",
+       " 'Angular',\n",
+       " 'Ansible',\n",
+       " 'API',\n",
+       " 'Arduino',\n",
+       " 'ASP.NET',\n",
+       " 'Awesome Lists',\n",
+       " 'Amazon Web Services',\n",
+       " 'Azure',\n",
+       " 'Babel',\n",
+       " 'Bash',\n",
+       " 'Bitcoin',\n",
+       " 'Bootstrap',\n",
+       " 'Bot',\n",
+       " 'C',\n",
+       " 'Chrome',\n",
+       " 'Chrome extension',\n",
+       " 'Command-line interface',\n",
+       " 'Clojure',\n",
+       " 'Code quality',\n",
+       " 'Code review',\n",
+       " 'Compiler',\n",
+       " 'Continuous integration',\n",
+       " 'C++',\n",
+       " 'Cryptocurrency',\n",
+       " 'Crystal']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "topics_list "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f3 lh-condensed mb-0 mt-1 Link--primary"
+    "description = page.find_all('p', class_='f5 color-fg-muted mb-0 mt-1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3D refers to the use of three-dimensional graphics, modeling, and animation in various industries.'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "description[0].text.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "description_list = []\n",
+    "for desc in description:\n",
+    "    description_list.append(desc.text.strip())\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/topics/3d',\n",
+       " '/topics/ajax',\n",
+       " '/topics/algorithm',\n",
+       " '/topics/amphp',\n",
+       " '/topics/android',\n",
+       " '/topics/angular',\n",
+       " '/topics/ansible',\n",
+       " '/topics/api',\n",
+       " '/topics/arduino',\n",
+       " '/topics/aspnet',\n",
+       " '/topics/awesome',\n",
+       " '/topics/aws',\n",
+       " '/topics/azure',\n",
+       " '/topics/babel',\n",
+       " '/topics/bash',\n",
+       " '/topics/bitcoin',\n",
+       " '/topics/bootstrap',\n",
+       " '/topics/bot',\n",
+       " '/topics/c',\n",
+       " '/topics/chrome',\n",
+       " '/topics/chrome-extension',\n",
+       " '/topics/cli',\n",
+       " '/topics/clojure',\n",
+       " '/topics/code-quality',\n",
+       " '/topics/code-review',\n",
+       " '/topics/compiler',\n",
+       " '/topics/continuous-integration',\n",
+       " '/topics/cpp',\n",
+       " '/topics/cryptocurrency',\n",
+       " '/topics/crystal']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "links = page.find_all('a', class_='no-underline flex-grow-0')\n",
+    "hrefs = [link.get('href') for link in links]\n",
+    "hrefs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is better to just add the link and store it then storing all links and again adding them one by one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "links_list = []\n",
+    "for link in links:\n",
+    "    links_list.append('https://github.com' + link.get('href'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dict = {\n",
+    "    'Topic': topics_list,\n",
+    "    'Description': description_list,\n",
+    "    'Link': links_list\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.DataFrame(data_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Topic</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Link</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3D</td>\n",
+       "      <td>3D refers to the use of three-dimensional grap...</td>\n",
+       "      <td>https://github.com/topics/3d</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ajax</td>\n",
+       "      <td>Ajax is a technique for creating interactive w...</td>\n",
+       "      <td>https://github.com/topics/ajax</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algorithm</td>\n",
+       "      <td>Algorithms are self-contained sequences that c...</td>\n",
+       "      <td>https://github.com/topics/algorithm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Amp</td>\n",
+       "      <td>Amp is a non-blocking concurrency library for ...</td>\n",
+       "      <td>https://github.com/topics/amphp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Android</td>\n",
+       "      <td>Android is an operating system built by Google...</td>\n",
+       "      <td>https://github.com/topics/android</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Angular</td>\n",
+       "      <td>Angular is an open source web application plat...</td>\n",
+       "      <td>https://github.com/topics/angular</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Ansible</td>\n",
+       "      <td>Ansible is a simple and powerful automation en...</td>\n",
+       "      <td>https://github.com/topics/ansible</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>API</td>\n",
+       "      <td>An API (Application Programming Interface) is ...</td>\n",
+       "      <td>https://github.com/topics/api</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Arduino</td>\n",
+       "      <td>Arduino is an open source platform for buildin...</td>\n",
+       "      <td>https://github.com/topics/arduino</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>ASP.NET</td>\n",
+       "      <td>ASP.NET is a web framework for building modern...</td>\n",
+       "      <td>https://github.com/topics/aspnet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Awesome Lists</td>\n",
+       "      <td>An awesome list is a list of awesome things cu...</td>\n",
+       "      <td>https://github.com/topics/awesome</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Amazon Web Services</td>\n",
+       "      <td>Amazon Web Services provides on-demand cloud c...</td>\n",
+       "      <td>https://github.com/topics/aws</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Azure</td>\n",
+       "      <td>Azure is a cloud computing service created by ...</td>\n",
+       "      <td>https://github.com/topics/azure</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Babel</td>\n",
+       "      <td>Babel is a compiler for writing next generatio...</td>\n",
+       "      <td>https://github.com/topics/babel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Bash</td>\n",
+       "      <td>Bash is a shell and command language interpret...</td>\n",
+       "      <td>https://github.com/topics/bash</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Bitcoin</td>\n",
+       "      <td>Bitcoin is a cryptocurrency developed by Satos...</td>\n",
+       "      <td>https://github.com/topics/bitcoin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Bootstrap</td>\n",
+       "      <td>Bootstrap is an HTML, CSS, and JavaScript fram...</td>\n",
+       "      <td>https://github.com/topics/bootstrap</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Bot</td>\n",
+       "      <td>A bot is an application that runs automated ta...</td>\n",
+       "      <td>https://github.com/topics/bot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>C</td>\n",
+       "      <td>C is a general purpose programming language th...</td>\n",
+       "      <td>https://github.com/topics/c</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Chrome</td>\n",
+       "      <td>Chrome is a web browser from the tech company ...</td>\n",
+       "      <td>https://github.com/topics/chrome</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Chrome extension</td>\n",
+       "      <td>Chrome extensions enable users to customize th...</td>\n",
+       "      <td>https://github.com/topics/chrome-extension</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Command-line interface</td>\n",
+       "      <td>A CLI, or command-line interface, is a console...</td>\n",
+       "      <td>https://github.com/topics/cli</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Clojure</td>\n",
+       "      <td>Clojure is a dynamic, general-purpose programm...</td>\n",
+       "      <td>https://github.com/topics/clojure</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Code quality</td>\n",
+       "      <td>Automate your code review with style, quality,...</td>\n",
+       "      <td>https://github.com/topics/code-quality</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Code review</td>\n",
+       "      <td>Ensure your code meets quality standards and s...</td>\n",
+       "      <td>https://github.com/topics/code-review</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Compiler</td>\n",
+       "      <td>Compilers are software that translate higher-l...</td>\n",
+       "      <td>https://github.com/topics/compiler</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Continuous integration</td>\n",
+       "      <td>Automatically build and test your code as you ...</td>\n",
+       "      <td>https://github.com/topics/continuous-integration</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>C++</td>\n",
+       "      <td>C++ is a general purpose and object-oriented p...</td>\n",
+       "      <td>https://github.com/topics/cpp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Cryptocurrency</td>\n",
+       "      <td>A cryptocurrency is a digital currency that us...</td>\n",
+       "      <td>https://github.com/topics/cryptocurrency</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Crystal</td>\n",
+       "      <td>Crystal is a self-hosted, general purpose prog...</td>\n",
+       "      <td>https://github.com/topics/crystal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Topic                                        Description  \\\n",
+       "0                       3D  3D refers to the use of three-dimensional grap...   \n",
+       "1                     Ajax  Ajax is a technique for creating interactive w...   \n",
+       "2                Algorithm  Algorithms are self-contained sequences that c...   \n",
+       "3                      Amp  Amp is a non-blocking concurrency library for ...   \n",
+       "4                  Android  Android is an operating system built by Google...   \n",
+       "5                  Angular  Angular is an open source web application plat...   \n",
+       "6                  Ansible  Ansible is a simple and powerful automation en...   \n",
+       "7                      API  An API (Application Programming Interface) is ...   \n",
+       "8                  Arduino  Arduino is an open source platform for buildin...   \n",
+       "9                  ASP.NET  ASP.NET is a web framework for building modern...   \n",
+       "10           Awesome Lists  An awesome list is a list of awesome things cu...   \n",
+       "11     Amazon Web Services  Amazon Web Services provides on-demand cloud c...   \n",
+       "12                   Azure  Azure is a cloud computing service created by ...   \n",
+       "13                   Babel  Babel is a compiler for writing next generatio...   \n",
+       "14                    Bash  Bash is a shell and command language interpret...   \n",
+       "15                 Bitcoin  Bitcoin is a cryptocurrency developed by Satos...   \n",
+       "16               Bootstrap  Bootstrap is an HTML, CSS, and JavaScript fram...   \n",
+       "17                     Bot  A bot is an application that runs automated ta...   \n",
+       "18                       C  C is a general purpose programming language th...   \n",
+       "19                  Chrome  Chrome is a web browser from the tech company ...   \n",
+       "20        Chrome extension  Chrome extensions enable users to customize th...   \n",
+       "21  Command-line interface  A CLI, or command-line interface, is a console...   \n",
+       "22                 Clojure  Clojure is a dynamic, general-purpose programm...   \n",
+       "23            Code quality  Automate your code review with style, quality,...   \n",
+       "24             Code review  Ensure your code meets quality standards and s...   \n",
+       "25                Compiler  Compilers are software that translate higher-l...   \n",
+       "26  Continuous integration  Automatically build and test your code as you ...   \n",
+       "27                     C++  C++ is a general purpose and object-oriented p...   \n",
+       "28          Cryptocurrency  A cryptocurrency is a digital currency that us...   \n",
+       "29                 Crystal  Crystal is a self-hosted, general purpose prog...   \n",
+       "\n",
+       "                                                Link  \n",
+       "0                       https://github.com/topics/3d  \n",
+       "1                     https://github.com/topics/ajax  \n",
+       "2                https://github.com/topics/algorithm  \n",
+       "3                    https://github.com/topics/amphp  \n",
+       "4                  https://github.com/topics/android  \n",
+       "5                  https://github.com/topics/angular  \n",
+       "6                  https://github.com/topics/ansible  \n",
+       "7                      https://github.com/topics/api  \n",
+       "8                  https://github.com/topics/arduino  \n",
+       "9                   https://github.com/topics/aspnet  \n",
+       "10                 https://github.com/topics/awesome  \n",
+       "11                     https://github.com/topics/aws  \n",
+       "12                   https://github.com/topics/azure  \n",
+       "13                   https://github.com/topics/babel  \n",
+       "14                    https://github.com/topics/bash  \n",
+       "15                 https://github.com/topics/bitcoin  \n",
+       "16               https://github.com/topics/bootstrap  \n",
+       "17                     https://github.com/topics/bot  \n",
+       "18                       https://github.com/topics/c  \n",
+       "19                  https://github.com/topics/chrome  \n",
+       "20        https://github.com/topics/chrome-extension  \n",
+       "21                     https://github.com/topics/cli  \n",
+       "22                 https://github.com/topics/clojure  \n",
+       "23            https://github.com/topics/code-quality  \n",
+       "24             https://github.com/topics/code-review  \n",
+       "25                https://github.com/topics/compiler  \n",
+       "26  https://github.com/topics/continuous-integration  \n",
+       "27                     https://github.com/topics/cpp  \n",
+       "28          https://github.com/topics/cryptocurrency  \n",
+       "29                 https://github.com/topics/crystal  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
    ]
   }
  ],
