--- a/main rough.ipynb
+++ b/main rough.ipynb
@@ -16,7 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://github.com/topics'"
+    "# url = 'https://github.com/topics'\n",
+    "url = 'http://127.0.0.1:5500/webpage.html'"
    ]
   },
   {
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2472,6 +2473,44 @@
       "  </div>\n",
       "  <div aria-atomic=\"true\" aria-live=\"assertive\" class=\"sr-only mt-n1\" id=\"js-global-screen-reader-notice-assertive\">\n",
       "  </div>\n",
+      "  <!-- Code injected by live-server -->\n",
+      "  <script>\n",
+      "   // <![CDATA[  <-- For SVG support\n",
+      "\tif ('WebSocket' in window) {\n",
+      "\t\t(function () {\n",
+      "\t\t\tfunction refreshCSS() {\n",
+      "\t\t\t\tvar sheets = [].slice.call(document.getElementsByTagName(\"link\"));\n",
+      "\t\t\t\tvar head = document.getElementsByTagName(\"head\")[0];\n",
+      "\t\t\t\tfor (var i = 0; i < sheets.length; ++i) {\n",
+      "\t\t\t\t\tvar elem = sheets[i];\n",
+      "\t\t\t\t\tvar parent = elem.parentElement || head;\n",
+      "\t\t\t\t\tparent.removeChild(elem);\n",
+      "\t\t\t\t\tvar rel = elem.rel;\n",
+      "\t\t\t\t\tif (elem.href && typeof rel != \"string\" || rel.length == 0 || rel.toLowerCase() == \"stylesheet\") {\n",
+      "\t\t\t\t\t\tvar url = elem.href.replace(/(&|\\?)_cacheOverride=\\d+/, '');\n",
+      "\t\t\t\t\t\telem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());\n",
+      "\t\t\t\t\t}\n",
+      "\t\t\t\t\tparent.appendChild(elem);\n",
+      "\t\t\t\t}\n",
+      "\t\t\t}\n",
+      "\t\t\tvar protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';\n",
+      "\t\t\tvar address = protocol + window.location.host + window.location.pathname + '/ws';\n",
+      "\t\t\tvar socket = new WebSocket(address);\n",
+      "\t\t\tsocket.onmessage = function (msg) {\n",
+      "\t\t\t\tif (msg.data == 'reload') window.location.reload();\n",
+      "\t\t\t\telse if (msg.data == 'refreshcss') refreshCSS();\n",
+      "\t\t\t};\n",
+      "\t\t\tif (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {\n",
+      "\t\t\t\tconsole.log('Live reload enabled.');\n",
+      "\t\t\t\tsessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);\n",
+      "\t\t\t}\n",
+      "\t\t})();\n",
+      "\t}\n",
+      "\telse {\n",
+      "\t\tconsole.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');\n",
+      "\t}\n",
+      "\t// ]]>\n",
+      "  </script>\n",
       " </body>\n",
       "</html>\n",
       "\n"
@@ -2484,7 +2523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2493,7 +2532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2504,7 +2543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2542,7 +2581,7 @@
        " 'Crystal']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2553,7 +2592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2562,7 +2601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2571,7 +2610,7 @@
        "'3D refers to the use of three-dimensional graphics, modeling, and animation in various industries.'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2582,7 +2621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2594,7 +2633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2632,7 +2671,7 @@
        " '/topics/crystal']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2652,7 +2691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2663,7 +2702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2676,7 +2715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2685,7 +2724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
